# DSGP-Brain-Tumor-Detection

./: .gitignore  CONTRIBUTING.md  Makefile  Preprocessing.ipynb  README.md  docker-compose.yml.save  pyproject.toml  requirements.txt  setup.cfg
MRI_image_feature_extraction/: Preprocessing.ipynb
data/: README.md
experiments/: README.md  app.py  check_imbalance.ipynb  ct-DenseNet_testing.ipynb  ct-NN_testing.ipynb  ct-VGG19_testing.ipynb  model_comparison_VGG19_vs_DenseNet.ipynb  model_comparison_VGG19_vs_NN.ipynb  segmentation_test.ipynb  segmentation_test_1.ipynb  segmentation_test_2.ipynb
experiments/2026_01_01_exp_001_merging_mri_images/: dataset_sources.json  experiment_summary.txt  merging_images_files.ipynb  metrics.json  stats.json
experiments/2026_01_02_exp_002_merging_and_moving_images/: dataset_source.json  experiment_summary.txt  merging_and_moving_images_files.ipynb  metrics.json  stats.json
experiments/2026_01_02_exp_003_removing_black_images/: dataset_source.json  experiment_summary.txt  metrics.json  removing_black_images_from_mri_and_ct_dataset.ipynb  stats.json
experiments/2026_01_06_exp_004_merging_and_moving_images/: dataset_source.json  experiment_summary.txt  merging_and_moving_segmentation_image_files.ipynb  metrics.json  stats.json
experiments/2026_01_06_exp_005_removing_black_images/: experiment_summary.txt  metrics.json  removing_black_images_from_segmentation_dataset.ipynb  stats.json
experiments/2026_01_07_exp_006_top_view_image_filtering/: config.yaml  dataset_source.json  experiment_summary.txt  (+5 more)
notebooks/: TumorSegmentation2.ipynb  evaluate_model copy.ipynb  evaluate_model.ipynb  segmentation_unet.ipynb
scripts/: data_splitting.ipynb  preprocess.py  preprocessing.ipynb
tests/: test_base_image_separator.py  test_batching.py  test_classification_image_separator.py  test_decorators.py  test_logging_utils.py  test_organize.py  test_organizer.py
(+185 files in other folders)
